[package]
name = "run-ctags"
version = "0.1.15"
authors = ["Yancy Ribbens <email@yancy.lol>"]
description = "Generate a ctags file for your Rust project with Universal Ctags."
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/yancyribbens/run-ctags"

[dependencies]
cargo_metadata = "0.18.1"
